--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="app_title">Crazy Chess</string>
     <string name="play_button_text">Play</string>
     <string name="edit_mode_button_text">Edit Mode</string>
-    <string name="author_title">Created By MMSWFLOW</string>
+    <string name="author_title" translatable="false">Created By MMSWFLOW</string>
     <string name="classic_game_mode">Classic</string>
     <string name="rapid_game_mode">Rapid</string>
     <string name="bullet_game_mode">Bullet</string>
@@ -11,4 +11,5 @@
     <string name="game_screen_title">Game</string>
     <string name="game_mode_selection_screen_title">Game Mode Selection</string>
     <string name="history_screen_title">History</string>
+    <string name="version">Version: 1</string>
 </resources>
