--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,13 @@
     <string name="home_screen_title">Home</string>
     <string name="game_screen_title">Game</string>
     <string name="game_mode_selection_screen_title">Game Mode Selection</string>
-    <string name="history_screen_title">History</string>
     <string name="version">Version: 1</string>
     <string name="games_history_button_text">Games History</string>
+    <string name="online_button_text">Online (Unavailable)</string>
+    <string name="offline_button_text">Offline</string>
+    <string name="game_multiplayer_selection_screen_title">Multiplayer</string>
+    <string name="history_list_screen_title">Games History</string>
+    <string name="history_screen_title">Game Moves History</string>
+    <string name="game_settings_screen_title">Settings</string>
+    <string name="settings_button_text">Settings</string>
 </resources>
