Added Home Menu & Created other screens to be implemented later

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
     <string name="history_screen_title">Game Moves History</string>
     <string name="game_settings_screen_title">Settings</string>
     <string name="settings_button_text">Settings</string>
+    <string name="offline_mode_description">In offline mode, you can play with another person using the same phone.</string>
+    <string name="online_mode_description">In online mode, you can connect with other players who are currently looking for a match.</string>
 </resources>
