Finished the Multiplayer mode selection (offline / online), added top app bar, made some tweaks to some components to make them more usable

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="settings_button_text">Settings</string>
     <string name="offline_mode_description">In offline mode, you can play with another person using the same phone.</string>
     <string name="online_mode_description">In online mode, you can connect with other players who are currently looking for a match.</string>
+    <string name="blitz_game_mode">Blitz</string>
 </resources>
