Logic of the game completed (Hopefully)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,6 @@
     <string name="game_ending_tie_dialog">It\'s a Draw!</string>
     <string name="game_ending_dialog">Won!</string>
     <string name="out_of_time_reason_for_winning">ran out of time</string>
+    <string name="checkmate_reason_for_winning">checkmate</string>
+    <string name="stalemate_reason_for_winning">stalemate</string>
 </resources>
