--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,8 +12,8 @@
     <string name="game_mode_selection_screen_title">Game Mode Selection</string>
     <string name="version">Version: 1</string>
     <string name="games_history_button_text">Games History</string>
-    <string name="online_button_text">Online (Unavailable)</string>
-    <string name="offline_button_text">Offline</string>
+    <string name="online_selectable_card_title">Online\n(Unavailable)</string>
+    <string name="offline_selectable_card_title">Offline</string>
     <string name="game_multiplayer_selection_screen_title">Multiplayer</string>
     <string name="history_list_screen_title">Games History</string>
     <string name="history_screen_title">Game Moves History</string>
